--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -241,6 +241,24 @@ SkyeClip allows customization of:\par
   <data name="ImageDeleteLog32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>ImageDeleteLog32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ImageEditCopy16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>ImageEditCopy16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImageEditCut16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>ImageEditCut16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImageEditDelete16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>ImageEditDelete16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImageEditPaste16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>ImageEditPaste16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImageEditSelectAll16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>ImageEditSelectAll16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImageEditUndo16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>ImageEditUndo16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ImageExit16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>ImageExit16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
