--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -267,6 +267,15 @@ SkyeClip allows customization of:\par
   <data name="IconAppNotify" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>IconAppNotify.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="IconClipExplorer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>IconClipExplorer.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="iconHelp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>iconHelp.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="iconLog" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>iconLog.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ImageAbout16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>ImageAbout16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -293,6 +302,9 @@ SkyeClip allows customization of:\par
   </data>
   <data name="ImageClearRemoveDelete16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>ImageClearRemoveDelete16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImageClipExplorer16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>ImageClipExplorer16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="imageClipViewer16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>imageClipViewer16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
