--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -294,6 +294,9 @@ SkyeClip allows customization of:\par
   <data name="ImageAbout32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>ImageAbout32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ImageApp16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>ImageApp16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ImageAttributionGitHub" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>ImageAttributionGitHub.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
