--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -351,6 +351,18 @@ SkyeClip allows customization of:\par
   <data name="ImageDeleteLog32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>ImageDeleteLog32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ImageEditCaseLower16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>ImageEditCaseLower16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImageEditCaseProper16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>ImageEditCaseProper16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImageEditCaseSentence16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>ImageEditCaseSentence16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImageEditCaseUpper16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>ImageEditCaseUpper16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ImageEditCopy16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>ImageEditCopy16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
