--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -118,29 +118,54 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ChangeLogRT" xml:space="preserve">
-    <value>{\rtf1\ansi\ansicpg1252\deff0\nouicompat{\fonttbl{\f0\fnil\fcharset0 Segoe UI;}{\f1\fnil\fcharset134 SimSun;}{\f2\fnil\fcharset0 SimSun;}{\f3\fnil Segoe UI;}{\f4\fnil\fcharset1 Segoe UI Symbol;}{\f5\fnil\fcharset0 Segoe UI Symbol;}{\f6\fnil Segoe UI Symbol;}}
+    <value>{\rtf1\ansi\ansicpg1252\deff0\nouicompat{\fonttbl{\f0\fnil\fcharset0 Segoe UI;}{\f1\fnil\fcharset134 SimSun;}{\f2\fnil Segoe UI;}{\f3\fnil\fcharset0 Segoe UI Symbol;}{\f4\fnil\fcharset1 Segoe UI Symbol;}{\f5\fnil Segoe UI Symbol;}{\f6\fnil\fcharset0 SimSun;}}
 {\colortbl ;\red0\green102\blue204;\red51\green153\blue102;}
 {\*\generator Riched20 10.0.26100}\viewkind4\uc1 
-\pard\cf1\b\f0\fs28\lang9 SkyeClip v1.1 What's New\par
+\pard\cf1\b\f0\fs28\lang9 SkyeClip v1.2 What's New\par
+\cf0\fs24 Released February 2026\par
+\cf1\fs28\par
+\cf2\fs24 New Features\par
+\cf0\b0\f1\lang1033\'a3\'ab\f0  Maintenance System Added. SkyeClip now includes an internal maintenance scheduler that runs quietly in the background. Automatic clip purging now occurs once per day while the app is running, ensuring long\f2\_term performance without requiring restarts. Automatic backups have been upgraded with flexible frequency options (daily, every other day, weekly, monthly, etc.) and now run reliably based on your selected schedule.\f1\par
+\'a3\'ab\f0  Backup System: Both manual and automatic backups of the database file are supported. Backup filenames include the application name and a date and time stamp for easy identification. Auto\f2\_\f0 backups use the same safe backup routine as manual backups and support automatic cleanup of older backup files.\par
+\f1\'a3\'ab\f0  Export Clip Support. SkyeClip now lets you export any stored clip to a file. Text clips save as TXT/RTF/HTML, images save as PNG/JPG/BMP, and FileDrop clips export as ZIP archives.\f1\par
+\'a3\'ab\f0  SkyeClip now lets you know when a new version is available. The About screen performs a quiet daily check and displays an upgrade notice right under the version number.\f1\par
+\'a3\'ab\f0  Added File Drop previews to Clip Explorer.\par
+\f1\'a3\'ab\f0  \f3 Clip Explorer now has image format previews.\f1\par
+\par
+\cf2\b\f0\lang9 Improvements\par
+\cf0\b0\f4\u10003?\f3\lang1033  \f5\lang9 Refined startup sequence to ensure timers and maintenance tasks initialize safely and predictably.\par
+\f4\u10003?\f3\lang1033  Scratch Pad now displays FIleDrops as a plain text file listing.\cf2\b\f0\lang9\par
+\cf0\b0\f4\u10003?\f3\lang1033  File size now includes folders in FileDrop previews.\f5\lang9\par
+\f4\u10003?\f3\lang1033  Unified clip previews under a single canonical function. Now both the current clipboard contents and the clip saved from that will share the same text.\f5\lang9\par
+\f4\u10003?\f3\lang1033  Enabled multi-row select in Clip Explorer. Updated context menu to work with multiple rows at a time.\f5\lang9\par
+\f4\u10003?\f3\lang1033  Added file count and size totals to FileDrop previews in both Clip Viewer and Clip Explorer.\f5\lang9\par
+\f4\u10003?\f3\lang1033  Added more Themes.\par
+\par
+\cf2\b\f0\lang9 Fixes\par
+\cf0\b0\f4\u10005?\f0\lang1033  Clips now show leading spaces in the tray menu.\f5\lang9\par
+\f4\u10005?\f0\lang1033  Fixed clip preview not showing in Tray tooltip during startup.\f5\lang9\par
+\f4\u10005?\f0\lang1033  Fixed a "No Columns Exist" error in Clip Explorer when closing the window.\f5\lang9\par
+\cf1\b\f0\fs28\par
+\fs24 SkyeClip v1.1\fs28\par
 \cf0\fs24 Released January 2026\par
 \par
 \cf2 New Features\par
-\cf0\b0\f1\lang1033\'a3\'ab\f2  \f0 New Theming System. SkyeClip now includes a unified Light/Dark theme engine that optionally stays in sync with Windows, updating instantly when your system theme changes.\f1\par
+\cf0\b0\f1\lang1033\'a3\'ab\f6  \f0 New Theming System. SkyeClip now includes a unified Light/Dark theme engine that optionally stays in sync with Windows, updating instantly when your system theme changes.\f1\par
 \'a3\'ab\f0  Clip Explorer, your fast and lightweight window into everything you\rquote ve copied. It gives you a clean, organized view of your clipboard history with clear previews, helpful details, and quick actions. Clip Explorer makes it easy to find and reuse your content.\f1\par
 \'a3\'ab\f0  Added Auto-Start With Windows Feature in Settings.\f1\par
-\'a3\'ab\f0  Added Scratch Pad, a lightweight built\f3\_\f0 in editor for quick notes and temporary text. Supports rich text and plain text, import/export, full editing shortcuts, a dedicated context menu with Shift\f3\_\f0 modified actions and optional persistence via Keep Text.\f1\par
-\'a3\'ab\f0  Open Source App. Added a new action to the clip context menu that lets you reopen the application a clip originated from. Includes safe, path\f3\_\f0 based legitimacy filtering to avoid system or background processes.\par
-\f1\'a3\'ab\f0  Source App Metadata. SkyeClip now stores the originating app\f3\rquote\f0 s name, executable path, and icon for each new clip, enabling richer app\f3\_\f0 aware actions.\par
-\f1\'a3\'ab\f0  Clip Action Context Menu. Introduced a dedicated right\f3\_\f0 click menu for individual clips featuring Set Clip, Favorite / Unfavorite, View Clip, and Delete. This focused interaction avoids keeping the tray menu open and significantly improves mouse\f3\_\f0 driven workflows.\par
+\'a3\'ab\f0  Added Scratch Pad, a lightweight built\f2\_\f0 in editor for quick notes and temporary text. Supports rich text and plain text, import/export, full editing shortcuts, a dedicated context menu with Shift\f2\_\f0 modified actions and optional persistence via Keep Text.\f1\par
+\'a3\'ab\f0  Open Source App. Added a new action to the clip context menu that lets you reopen the application a clip originated from. Includes safe, path\f2\_\f0 based legitimacy filtering to avoid system or background processes.\par
+\f1\'a3\'ab\f0  Source App Metadata. SkyeClip now stores the originating app\f2\rquote\f0 s name, executable path, and icon for each new clip, enabling richer app\f2\_\f0 aware actions.\par
+\f1\'a3\'ab\f0  Clip Action Context Menu. Introduced a dedicated right\f2\_\f0 click menu for individual clips featuring Set Clip, Favorite / Unfavorite, View Clip, and Delete. This focused interaction avoids keeping the tray menu open and significantly improves mouse\f2\_\f0 driven workflows.\par
 \cf1\b\lang9\par
 \cf2 Improvements\par
-\cf0\b0\f4\u10003?\f5\lang1033  Added "&lt;RTF&gt;" or "&lt;HTML&gt;" the the clip previews, depending on the type.\f6\lang9\par
-\f4\u10003? \f5\lang1033 Migrated the HTML preview subsystem from IE to WebView2 for modern, accurate rendering\par
-\f4\lang9\u10003?\f5\lang1033  Enhanced stability and performance of the preview window\f6\lang9\par
+\cf0\b0\f4\u10003?\f3\lang1033  Added "&lt;RTF&gt;" or "&lt;HTML&gt;" the the clip previews, depending on the type.\f5\lang9\par
+\f4\u10003? \f3\lang1033 Migrated the HTML preview subsystem from IE to WebView2 for modern, accurate rendering\par
+\f4\lang9\u10003?\f3\lang1033  Enhanced stability and performance of the preview window\f5\lang9\par
 \cf2\b\f0\par
 Fixes\par
-\cf0\b0\f4\u10005? \f5\lang1033 Fixed issues with inconsistent moving of forms.\f6\lang9\par
-\f4\u10005? \f5\lang1033 Fixed a bug with WebView2 in Clip Viewer that was preventing a clean load.\f6\lang9\par
+\cf0\b0\f4\u10005? \f3\lang1033 Fixed issues with inconsistent moving of forms.\f5\lang9\par
+\f4\u10005? \f3\lang1033 Fixed a bug with WebView2 in Clip Viewer that was preventing a clean load.\f5\lang9\par
 \cf1\b\f0\fs28\par
 \fs24 SkyeClip v1.0\fs28\par
 \cf0\fs24 Released January 2026\cf1\par
@@ -158,7 +183,7 @@ Fixes\par
 \cf2\b\f0\par
 Fixes\par
 \cf0\b0\f4\u10005? Resolved an issue where Windows Explorer produced duplicate text clips\par
-\u10005? Various stability fixes across clipboard capture and menu refres\f5\lang1033 h\cf2\b\f0\lang9\par
+\u10005? Various stability fixes across clipboard capture and menu refres\f3\lang1033 h\cf2\b\f0\lang9\par
 \cf1\par
 \fs28 Thank you for using SkyeClip!\cf0\b0\fs24\par
 }
@@ -179,13 +204,17 @@ Tray Menu\par
 \cf2\b\par
 Tray Menu HotKeys (Customizable)\par
 \cf0\par
-\b0\i &lt;Spacebar&gt;\par
+\b0\i &lt;F&gt;\par
 Toggle Favorite\par
 \i0 Marks or unmarks the selected clip as a Favorite. Favorited clips appear in the Favorites menu for quick access.\par
 \b\par
 \b0\i &lt;V&gt;\par
 Show Clip Viewer\par
-\i0 Opens the Clip Viewer \f2\emdash  a compact companion window that displays the full contents of the selected clip.\par
+\i0 Opens the Clip Viewer,\f2  a compact companion window that displays the full contents of the selected clip.\par
+\par
+\i\f1\lang1033 &lt;S&gt;\i0\par
+Show Scratch Pad\par
+Opens the Scratch Pad with the selected clip appended to the current text, if any.\f2\lang9\par
 \par
 \cf2\b\f1 Favorites\par
 \par
@@ -242,6 +271,22 @@ You can export your Scratch Pad content at any time. Scratch Pad supports\f1\lan
 \i Importing Content\f1\lang1033\par
 \i0\f2\lang9 You can import\f1\lang1033  Rich Text (\f2\lang9 .rtf\f1\lang1033 )\f2\lang9  files\f1\lang1033  \f2\lang9 with formatting\f1\lang1033 , as well as Plain Text (\f2\lang9 .txt\f1\lang1033 )\f2\lang9  files\f1\lang1033 . \f2\lang9 Imported content replaces whatever is currently in Scratch Pad.\par
 \f1\par
+\cf2\b Export Clip\par
+\cf0\b0\par
+SkyeClip lets you save any stored clip as a standalone file on your computer. This is useful when you want to keep a copy outside the clipboard history, share a clip with someone else, or archive important content.\par
+\par
+\i What You Can Export\i0\par
+SkyeClip supports exporting every major clipboard format:\par
+- Text clips saved as .txt (Unicode Text), .rtf (Rich Text), or .html (HTML Fragment).\par
+- Image clips saved as .png, .jpg, or .bmp.\par
+- File drops (files copied in Explorer) saved as .zip archive containing all copied files and folders.\par
+- Binary / unknown formats saved as .bin (raw clipboard data).\par
+\par
+SkyeClip automatically detects the clip\rquote s format and offers the appropriate export options.\par
+\par
+\i How To Export A Clip\i0\par
+You can export a clip from the main Tray context menu, the Clip Explorer context menu, or from the floating button in Clip Viewer.\f2\par
+\f1\par
 \cf2\b Clip Explorer\par
 \cf0\b0\par
 Clip Explorer provides a fast, organized view of your clipboard history. It\rquote s designed as a simple browser for past clips, letting you quickly find, preview, and reuse anything you\rquote ve copied.\par
@@ -280,6 +325,31 @@ SkyeClip allows customization of:\par
 - Whether or not to notify the user of new clips on the clipboard\par
 - Purge Functions\par
 - and more\par
+\par
+\cf2\b Automatic Backups\par
+\cf0\b0\par
+SkyeClip can create periodic backups of your clipboard database according to your selected schedule.\par
+\par
+\i Backup Frequency Options\i0\par
+- Never\par
+- Every Day\par
+- Every Other Day\par
+- Every Three Days\par
+- Every Week\par
+- Every Other Week\par
+- Every Month\par
+Backups are stored in your SkyeClip data folder using a timestamped filename.\par
+If enabled, SkyeClip can also automatically purge older backup files to conserve space.\par
+\par
+\i Backup Behavior\par
+\i0 - Runs silently in the background\par
+- Uses the same safe backup routine as manual backups\par
+- Logs all backup activity\par
+\par
+\i Manual Control\i0\par
+You can still perform manual backups at any time.\par
+Automatic maintenance never interferes with manual actions.\par
+\par
 \par
 }
  </value>
