--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -406,6 +406,9 @@ Automatic maintenance never interferes with manual actions.\par
   <data name="ImageAttributionSQLite" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>ImageAttributionSQLite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ImageBackup16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>ImageBackup16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ImageChangeLog32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>ImageChangeLog32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -486,6 +489,9 @@ Automatic maintenance never interferes with manual actions.\par
   </data>
   <data name="ImageRefreshLog32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>ImageRefreshLog32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImageRestore16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>ImageRestore16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="imageScratchPad16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>imageScratchPad16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
